--- a/Registration.html
+++ b/Registration.html
@@ -7,7 +7,7 @@
 
     <meta name="viewport" content="width=device-width, height=device-height, viewport-fit=cover, initial-scale=1" />
     <link rel="icon" href="CSS/Pictures/favicon.png" type="image/gif">
-    <link rel="stylesheet" href="CSS/Registration.css" type="text/css">
+    <link rel="stylesheet" href="./CSS/Registration.css" type="text/css">
 
     <script type="text/javascript">
         a = 0;
